--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
 
     <!-- Fontawesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/style.css">
@@ -20,7 +17,29 @@
 
 <body>
     <!-- HEADER -->
-    <header></header>
+    <header class="header">
+        <div class="container flex">
+            <div class="header-logo">
+                <img class="logo flex" src="./img/logo.png" alt="header-logo">
+            </div>
+
+            <nav class="header-menu">
+                <ul>
+                    <li><a href="">Planning</a></li>
+                    <li><a href="">Testimonials</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a class="get-started" href="">Get Started</a></li>
+                </ul>
+            </nav>
+
+            <div class="hamburger-menu">
+                <button class="hamburger-menu-btn">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </header>
     <!-- /HEADER -->
 
     <!-- MAIN -->
@@ -30,6 +49,7 @@
     <!-- FOOTER -->
     <footer></footer>
     <!-- /FOOTER -->
-    
+
 </body>
+
 </html>
