feat: completed header and fist cards section responsive

--- a/index.html
+++ b/index.html
@@ -43,7 +43,22 @@
     <!-- /HEADER -->
 
     <!-- MAIN -->
-    <main></main>
+    <main>
+        <!-- 5 cards section -->
+        <section id="card-section" class="services">
+            <div class="container">
+                <div class="colums">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+
+        </section>
+        <!-- /5 cards section -->
+    </main>
     <!-- /MAIN -->
 
     <!-- FOOTER -->
