feat: strategic section completed with responsive

--- a/index.html
+++ b/index.html
@@ -55,9 +55,17 @@
                     <div class="col"></div>
                 </div>
             </div>
-
         </section>
         <!-- /5 cards section -->
+        <!-- strategic section -->
+        <section id="strategic-section" class="planning">
+            <div class="container">
+                <div class="item"></div>
+                <div class="item developement"></div>
+            </div>
+
+        </section>
+        <!-- /strategic section -->
     </main>
     <!-- /MAIN -->
 
