feat: testimonials section completed with responsive

--- a/index.html
+++ b/index.html
@@ -63,9 +63,20 @@
                 <div class="item"></div>
                 <div class="item developement"></div>
             </div>
-
         </section>
         <!-- /strategic section -->
+        <!-- testimonials section -->
+        <section id="testimonials-section" class="testimonials">
+            <div class="container">
+                <div class="colums">
+                    <div class="col partners"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /testimonials section-->
     </main>
     <!-- /MAIN -->
 
