feat: benefits section completed with responsive

--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
             </div>
         </section>
         <!-- /testimonials section-->
+        <!-- benefits section -->
+        <section id="benefits-section" class="benefits">
+            <div class="container">
+                <div class="title-benefits"></div>
+                <div class="colums">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /benefits section -->
     </main>
     <!-- /MAIN -->
 
