feat: completed about section with responsive

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- benefits section -->
         <section id="benefits-section" class="benefits">
             <div class="container">
-                <div class="title-benefits"></div>
+                <h2 class="title-benefits"></h2>
                 <div class="colums">
                     <div class="col"></div>
                     <div class="col"></div>
@@ -92,6 +92,16 @@
             </div>
         </section>
         <!-- /benefits section -->
+        <!-- about section -->
+        <section id="about-section" class="about">
+            <div class="container">
+                <div class="colums">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /about section -->
     </main>
     <!-- /MAIN -->
 
