feat: cta section completed with responsive

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             </div>
         </section>
         <!-- /about section -->
+        <!-- cta section -->
+        <section id="cta-section" class="cta">
+            <div class="small-container">
+                
+            </div>
+        </section>
+        <!-- /cta section -->
     </main>
     <!-- /MAIN -->
 
