feat: footer completed with responsive

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- cta section -->
         <section id="cta-section" class="cta">
             <div class="small-container">
-                
+
             </div>
         </section>
         <!-- /cta section -->
@@ -113,7 +113,9 @@
     <!-- /MAIN -->
 
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+        <div id="footer" class="small-container"></div>
+    </footer>
     <!-- /FOOTER -->
 
 </body>
