feat: card section completed

--- a/index.html
+++ b/index.html
@@ -48,11 +48,47 @@
         <section id="card-section" class="services">
             <div class="container">
                 <div class="colums">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col flex">
+                        <h3>Get a demo application</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                        </p>
+                        <a href=""><i class="fa-brands fa-apple"></i> App Store</a>
+                        <img src="./img/phone.png" alt="phone">
+                    </div>
+                    <div class="col">
+                        <i class="fa-solid fa-file-code icons"></i>
+                        <h3>Clean Code</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <i class="fa-solid fa-compass-drafting icons"></i>
+                        <h3>Web Design</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <i class="fa-solid fa-laptop-code icons"></i>
+                        <h3>Developement</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <i class="fa-solid fa-bullhorn icons"></i>
+                        <h3>Branding</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
