--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
         <section id="card-section" class="services">
             <div class="container">
                 <div class="colums">
-                    <div class="col flex">
-                        <h3>Get a demo application</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-                            nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
-                        </p>
-                        <a href=""><i class="fa-brands fa-apple"></i> App Store</a>
-                        <img src="./img/phone.png" alt="phone">
+                    <div class="col">
+                        <div class="demo-application">
+                            <h3>Get a demo application</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                                nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
+                            </p>
+                            <a href=""><i class="fa-brands fa-apple"></i> App Store</a>
+                        </div>
+                        <div class="phone-img"><img src="./img/phone.png" alt="phone"></div>
                     </div>
                     <div class="col">
                         <i class="fa-solid fa-file-code icons"></i>
