feat: strategic section completed with responsive

--- a/index.html
+++ b/index.html
@@ -98,8 +98,24 @@
         <!-- strategic section -->
         <section id="strategic-section" class="planning">
             <div class="container">
-                <div class="item"></div>
-                <div class="item developement"></div>
+                <div class="item">
+                    <img src="./img/planning1.png" alt="plannning-1">
+                    <h2>Strategic Planning</h2>
+                    <p>
+                        Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc.
+                        Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa
+                        placerat duis. Quis vierra nibth cras pulvinar mattis.
+                    </p>
+                </div>
+                <div class="item developement">
+                    <div class="app-developement">
+                        <img src="./img/planning2.png" alt="planning-2">
+                        <h3>App Developement</h3>
+                        <p>Develop an on-demand app for you delivery business to reach your targeted customers without
+                            any interrupstion.</p>
+                        <div class="flex"><i class="arrow fa-solid fa-arrow-down"></i></div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /strategic section -->
@@ -107,7 +123,13 @@
         <section id="testimonials-section" class="testimonials">
             <div class="container">
                 <div class="colums">
-                    <div class="col partners"></div>
+                    <div class="col partners">
+                        <h3>Testimonials</h3>
+                        <h2>We are committed expert partners</h2>
+                        <p>
+                            We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to gei it right.
+                        </p>
+                    </div>
                     <div class="col"></div>
                     <div class="col"></div>
                     <div class="col"></div>
