--- a/index.html
+++ b/index.html
@@ -124,15 +124,50 @@
             <div class="container">
                 <div class="colums">
                     <div class="col partners">
-                        <h3>Testimonials</h3>
+                        <h3>TESTIMONIALS</h3>
                         <h2>We are committed expert partners</h2>
                         <p>
-                            We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to gei it right.
+                            We place huge value on strong relationships and have seen the benefit they bring to our
+                            business. Customer feedback is vital in helping us to gei it right.
                         </p>
                     </div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col">
+                        <div class="testimonials-img"><img src="./img/testimonial1.jpg" alt="testimonial-1"></div>
+                        <div class="testimonals-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                                fermentum. Praesent semper feugiat nibh pulvinar proin.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <p class="name">NAT REYNOLDS</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="testimonials-img"><img src="./img/testimonial2.jpg" alt="testimonial-2"></div>
+                        <div class="testimonals-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Pharetra vel turpis nuns eget lorem. Quisque id diam vel quam elementum pulvinar etiam.
+                                Urna
+                                porttitor rhoncus dolor purus non enim praesent elementum.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <p>CELIA ALMEDA</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="testimonials-img"><img src="./img/testimonial3.jpg" alt="testimonial-3"></div>
+                        <div class="testimonials-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Mauris auge neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin.
+                                nibh nisl condimentum id veneratis a condimentum.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <p>BOB ROBERTS</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
