feat: benefits section completed with responsive

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 porttitor rhoncus dolor purus non enim praesent elementum.
                                 <i class="fa-solid fa-quote-right"></i>
                             </p>
-                            <p>CELIA ALMEDA</p>
+                            <p class="name">CELIA ALMEDA</p>
                         </div>
                     </div>
                     <div class="col">
@@ -165,7 +165,7 @@
                                 nibh nisl condimentum id veneratis a condimentum.
                                 <i class="fa-solid fa-quote-right"></i>
                             </p>
-                            <p>BOB ROBERTS</p>
+                            <p class="name">BOB ROBERTS</p>
                         </div>
                     </div>
                 </div>
@@ -175,14 +175,50 @@
         <!-- benefits section -->
         <section id="benefits-section" class="benefits">
             <div class="container">
-                <h2 class="title-benefits"></h2>
+                <h2 class="title-benefits">Befefits of working <br>with us</h2>
                 <div class="colums">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col">
+                        <h2>01</h2>
+                        <h3>Hight Quality</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
+                    <div class="col">
+                        <h2>02</h2>
+                        <h3>Creative Team</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
+                    <div class="col">
+                        <h2>03</h2>
+                        <h3>Amazing Results</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
+                    <div class="col">
+                        <h2>04</h2>
+                        <h3>Best Pricing</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
+                    <div class="col">
+                        <h2>05</h2>
+                        <h3>Innovations</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
+                    <div class="col">
+                        <h2>06</h2>
+                        <h3>24/7 Support</h3>
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+                        <a class="more" href="">more</a>
+                    </div>
                 </div>
             </div>
         </section>
