--- a/index.html
+++ b/index.html
@@ -227,8 +227,21 @@
         <section id="about-section" class="about">
             <div class="container">
                 <div class="colums">
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col">
+                        <h2>About Us</h2>
+                        <p>
+                            Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerique eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
+                        </p>
+                        <p class="second-ph">
+                            Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt torto aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <div class="about-img"><img src="./img/about.jpg" alt="about-img"></div>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
+                        <a href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+                    </div>
                 </div>
             </div>
         </section>
