feat: cta-section completed with responsive

--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@
         <!-- cta section -->
         <section id="cta-section" class="cta">
             <div class="small-container">
+                <h4>GET STARTED</h4>
+                <h3>Simple, Transparent Pricing</h3>
+                <h2>It's Free!</h2>
+                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into others plans with more controls.</p>
+                <div class="start"><a href="">Get Started</a></div>
+                <p class="copyright">
+                    Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i class="fa-solid fa-circle"></i> <a class="privacy" href="">Privacy policy</a>
+                </p>
 
             </div>
         </section>
