fix: fa-quote-left

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col">
                         <div class="about-img"><img src="./img/about.jpg" alt="about-img"></div>
-                        <i class="fa-solid fa-quote-left"></i>
+                        <i class="fa-solid fa-quote-left quote-about"></i>
                         <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
                         <a href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
                     </div>
@@ -248,6 +248,7 @@
         <!-- /about section -->
         <!-- cta section -->
         <section id="cta-section" class="cta">
+
             <div class="small-container">
                 <h4>GET STARTED</h4>
                 <h3>Simple, Transparent Pricing</h3>
@@ -257,7 +258,6 @@
                 <p class="copyright">
                     Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i class="fa-solid fa-circle"></i> <a class="privacy" href="">Privacy policy</a>
                 </p>
-
             </div>
         </section>
         <!-- /cta section -->
@@ -266,7 +266,14 @@
 
     <!-- FOOTER -->
     <footer>
-        <div id="footer" class="small-container"></div>
+        <div id="footer" class="small-container">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!
+            </p>
+            <p class="last-ph">
+                <a href="">Lorem ipsum</a> scelerisque mauris pellentesque <a class="boolean" href="">Boolean careers</a>
+            </p>
+        </div>
     </footer>
     <!-- /FOOTER -->
 
