--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -180,42 +186,48 @@
                     <div class="col">
                         <h2>01</h2>
                         <h3>Hight Quality</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
                     <div class="col">
                         <h2>02</h2>
                         <h3>Creative Team</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
                     <div class="col">
                         <h2>03</h2>
                         <h3>Amazing Results</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
                     <div class="col">
                         <h2>04</h2>
                         <h3>Best Pricing</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
                     <div class="col">
                         <h2>05</h2>
                         <h3>Innovations</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
                     <div class="col">
                         <h2>06</h2>
                         <h3>24/7 Support</h3>
-                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in
+                            fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                         </p>
                         <a class="more" href="">more</a>
                     </div>
@@ -230,10 +242,17 @@
                     <div class="col">
                         <h2>About Us</h2>
                         <p>
-                            Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerique eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
+                            Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerique eleifend donec
+                            pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus
+                            interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae
+                            tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque
+                            habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
                         </p>
                         <p class="second-ph">
-                            Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt torto aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.
+                            Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut
+                            tristique. Pellentesque eu tincidunt torto aliquam nulla facilisi cras fermentum odio.
+                            Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim.
+                            the text box. Click again or double click to start editing the text.
                         </p>
                     </div>
                     <div class="col">
@@ -253,10 +272,12 @@
                 <h4>GET STARTED</h4>
                 <h3>Simple, Transparent Pricing</h3>
                 <h2>It's Free!</h2>
-                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into others plans with more controls.</p>
+                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into others
+                    plans with more controls.</p>
                 <div class="start"><a href="">Get Started</a></div>
                 <p class="copyright">
-                    Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i class="fa-solid fa-circle"></i> <a class="privacy" href="">Privacy policy</a>
+                    Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i
+                        class="fa-solid fa-circle"></i> <a class="privacy" href="">Privacy policy</a>
                 </p>
             </div>
         </section>
@@ -268,10 +289,12 @@
     <footer>
         <div id="footer" class="small-container">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla
+                pariatur impedit!
             </p>
             <p class="last-ph">
-                <a href="">Lorem ipsum</a> scelerisque mauris pellentesque <a class="boolean" href="">Boolean careers</a>
+                <a href="">Lorem ipsum</a> scelerisque mauris pellentesque <a class="boolean" href="">Boolean
+                    careers</a>
             </p>
         </div>
     </footer>
