fix: app-store button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
                                 nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
                             </p>
-                            <a href=""><i class="fa-brands fa-apple"></i> App Store</a>
+                            <div class="app-store"><a href=""><i class="fa-brands fa-apple"></i> App Store</a></div>
                         </div>
                         <div class="phone-img"><img src="./img/phone.png" alt="phone"></div>
                     </div>
