fix: image quote about section

--- a/index.html
+++ b/index.html
@@ -256,8 +256,10 @@
                         </p>
                     </div>
                     <div class="col">
-                        <div class="about-img"><img src="./img/about.jpg" alt="about-img"></div>
-                        <i class="fa-solid fa-quote-left quote-about"></i>
+                        <div class="about-img">
+                            <img src="./img/about.jpg" alt="about-img">
+                            <i class="fa-solid fa-quote-left quote-about"></i>
+                        </div>
                         <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
                         <a href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
                     </div>
